--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,7 +28,10 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="chapter1"></div>
+    <div id="chapter2"></div>
+    <div id="chapter3"></div>
+    <div id="chapter4"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
