--- a/client/public/index.html
+++ b/client/public/index.html
@@ -32,6 +32,7 @@
     <div id="chapter2"></div>
     <div id="chapter3"></div>
     <div id="chapter4"></div>
+    <div id="foo"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
