--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,6 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="app"></div>
     <div id="chapter1"></div>
     <div id="chapter2"></div>
     <div id="chapter3"></div>
