--- a/Module2/14_Assignment/public/register.html
+++ b/Module2/14_Assignment/public/register.html
@@ -6,8 +6,8 @@
     <meta name="description" content="Login Page" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/form.css" />
-    <link rel="stylesheet" href="css/index.css" />
-    <script src="/index.js" defer></script>
+    <link rel="stylesheet" href="css/register.css" />
+    <script src="/register.js" defer></script>
   </head>
 
   <body>
