Place order on successfull payment

--- a/Module2/14_Assignment/public/items.html
+++ b/Module2/14_Assignment/public/items.html
@@ -87,43 +87,15 @@
       </div>
     </div>
     <div id="cart" class="cart hide">
-      <div class="heading">Cart</div>
-      <div id="items" class="items">
-        <div class="item">
-          <div class="name">Name</div>
-          <div class="price">Price</div>
-          <div class="quantity">
-            <select>
-              <option key="1" selected>1</option>
-              <option key="2">2</option>
-            </select>
-          </div>
-          <div class="delete">Remove</div>
-        </div>
-        <div class="item">
-          <div class="name">Name</div>
-          <div class="price">Price</div>
-          <div class="quantity">
-            <select>
-              <option key="1" selected>1</option>
-              <option key="2">2</option>
-            </select>
-          </div>
-        </div>
-        <div class="item total">
-          <div class="name">Total</div>
-          <div class="price">Price</div>
-          <div class="quantity">Q</div>
-        </div>
+      <div class="heading">
+        <div></div>
+        <div class="title">Cart</div>
+        <div id="close" class="close">close</div>
       </div>
+      <div id="items" class="items"></div>
       <div id="checkout" class="checkout">CHECKOUT</div>
     </div>
+    <script src="/autherize.js" defer></script>
     <script src="/items.js" defer></script>
   </body>
 </html>
-
-<!-- "title": "Vegan",
-    "description": "Concept of healthy vegan eating",
-    "type": "vegan",
-    "price": 28.96,
-    "rating": 5 -->
