--- a/Module2/14_Assignment/public/checkout.html
+++ b/Module2/14_Assignment/public/checkout.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/stripe/normalize.css" />
     <link rel="stylesheet" href="css/stripe/global.css" />
     <script src="https://js.stripe.com/v3/"></script>
+    <script src="/autherize.js" defer></script>
     <script src="/checkout.js" defer></script>
   </head>
 
