Add error handling

--- a/Module2/14_Assignment/public/checkout.html
+++ b/Module2/14_Assignment/public/checkout.html
@@ -16,6 +16,8 @@
 
   <body>
     <div class="sr-root">
+      <h1 id="price">USD 15</h1>
+      <div id="error"></div>
       <div class="sr-main">
         <form id="payment-form" class="sr-payment-form">
           <div class="sr-combo-inputs-row">
